--- a/config/FurnitureShop.yml
+++ b/config/FurnitureShop.yml
@@ -2,7 +2,7 @@ server:
   port: 3000
 application:
   domain: juice-sh.op
-  name: 'OWASP Juice Shop'
+  name: 'Furniture Shop'
   logo: JuiceShop_Logo.png
   favicon: favicon_js.ico
   theme: bluegrey-lightgreen
