--- a/config/FurnitureShop.yml
+++ b/config/FurnitureShop.yml
@@ -3,8 +3,8 @@ server:
   basePath: ''
 application:
   domain: juice-sh.op
-  name: 'IKEA Furniture Shop'
-  logo: 'IKEA_LOGO.png'
+  name: 'The Furniture Shop'
+  logo: ''
   favicon: favicon_js.ico
   theme: blue-lightblue # Options: bluegrey-lightgreen blue-lightblue deeppurple-amber indigo-pink pink-bluegrey purple-green deeporange-indigo
   showVersionNumber: false
@@ -92,54 +92,54 @@ products:
     name: 'Äpplarö'
     description: 'Even better for sitting outside'
     price: 34.99
-    image: äpplaröbench.jpg
+    image: äpplaröbench.JPG
     reviews:
       - { text: 'I bought it, would buy again. 9/10', author: admin }
   -
     name: 'Besta'
     description: 'Perfect for every 90 inch tv'
     price: 39.99
-    image: besta.jpg
+    image: besta.JPG
   -
     name: 'besynnerlig'
     description: 'In case you ever needed a monkey to hold your candle'
     price: 2.99
     deluxePrice: 1.99
-    image: besynnerlig.jpg
+    image: besynnerlig.JPG
   -
     name: 'Blabärsmott'
     description: 'Goes incredibly well with the couch'
     price: 9.99
-    image: blabärsmott.jpg
+    image: blabärsmott.JPG
     reviews:
       - { text: 'Lovely. Just lovely', author: bender }
   -
     name: 'Böja'
     description: 'Made from recycled wood'
     price: 4.99
-    image: böja.jpg
+    image: böja.JPG
   -
     name: 'Daim chocolate pie'
     description: 'Best pie out there'
     price: 3.49
-    image: daim.jpg
+    image: daim.JPG
   -
     name: 'Djungelskog'
     description: 'Both cute and scary at the same time'
     price: 4.99
-    image: djungelskog.jpg
+    image: djungelskog.JPG
     urlForProductTamperingChallenge: 'https://www.owasp.org/index.php/O-Saft'
   -
     name: 'Ekenäset'
     description: 'The chair that lasts for centuries'
     price: 29.99
-    image: ekenäset.jpg
+    image: ekenäset.JPG
     useForChristmasSpecialChallenge: true
   -
     name: 'Ekoln'
     description: 'Perfect for all kinds of liquids <br/><span style="color:red;">This item has been made unavailable because of lack of safety standards.</span>'
     price: 4.99
-    image: ekoln.jpg
+    image: ekoln.JPG
     keywordsForPastebinDataLeakChallenge:
       - hueteroneel
       - eurogium edule
@@ -147,51 +147,51 @@ products:
     name: 'Ektorp'
     description: 'Lovely couch. By now this is a rare collectors item. <em>Out of stock!</em>'
     price: 999.99
-    image: ektorp.jpg
+    image: ektorp.JPG
     deletedDate: '2017-04-28'
   -
     name: 'Frakta'
     description: 'The bag that keeps all your chocolate pies cool'
     price: 5.99
-    image: frakta.jpg
+    image: frakta.JPG
   -
     name: 'Fredön'
     description: 'Even greater and better for being outside'
     price: 39.99
-    image: fredön.jpg
+    image: fredön.JPG
   -
     name: 'Hattefjäll'
     description: 'A great office chair'
     price: 59.99
-    image: hattefjäll.jpg
+    image: hattefjäll.JPG
   -
     name: 'Hemnes'
     description: 'The perfect nightstand for everyone'
     price: 4.99
-    image: hemnes.jpg
+    image: hemnes.JPG
   -
     name: 'Jättene'
     description: 'From all the moving boxes, this one is the best'
     price: 2.99
-    image: jättene.jpg
+    image: jättene.JPG
     reviews:
       - { text: 'I haved tried several different moving boxes before finally settling on this one. Perfect!', author: rapper }
   -
     name: 'Symfonisk'
     description: 'Lamp and speaker in one! What else do you want in life?'
     price: 21.99
-    image: symfonisk.jpg
+    image: symfonisk.JPG
   -
     name: 'Borstad'
     description: 'Nothing feels more like spring than ferociously slapping your rug outside with this Borstad'
     price: 10.99
-    image: borstad.jpg
+    image: borstad.JPG
   -
     name: 'Världens'
     description: 'Yes! We also sell backpacks'
     price: 19.99
     quantity: 5
-    image: världens.jpg
+    image: världens.JPG
     reviews:
       - { text: 'Seems impossibly endless', author: rapper }
       - { text: 'Too bad I had to put this bag together myself as well', author: jim }
@@ -199,68 +199,68 @@ products:
     name: 'Gunde'
     description: 'It is impossible to be unable to set this chair up'
     price: 6.99
-    image: gunde.jpg
+    image: gunde.JPG
   -
     name: 'Pello'
     description: 'The chair that has been popular everywhere for milennia!'
     price: 49.99
-    image: pello.jpg
+    image: pello.JPG
     reviews:
       - { text: 'Impossible to hate!', author: jim }
   -
     name: 'Karmsund'
     description: 'For every moment of self appreciation'
     price: 20.99
-    image: karmsund.jpg
+    image: karmsund.JPG
   -
     name: 'Kex'
     description: 'Delicious cookies. Can be <a href="/#recycle">sent back to us</a> for recycling.'
     price: 1.89
-    image: kex.jpg
+    image: kex.JPG
   -
     name: 'Solvinden'
     description: 'Sets the perfect atmoshpere for those early spring evenings.'
     price: 11.95
-    image: solvinden.jpg
+    image: solvinden.JPG
   -
     name: 'Lagan'
     description: 'Great stove! Note: does not substitute poor cooking skills'
     price: 99.99
-    image: lagan.jpg # Exif metadata contains "OpenSCAD" as subtle hint...
+    image: lagan.JPG # Exif metadata contains "OpenSCAD" as subtle hint...
     fileForRetrieveBlueprintChallenge: JuiceShop.stl # ...to blueprint file type
   -
     name: 'Linnmon'
     description: 'Excellent affordable desk'
     price: 278.74
     quantity: 1
-    image: linnmon.jpg
+    image: linnmon.JPG
   -
     name: 'Markus'
     description: 'C-suite office chair'
     price: 99.00
-    image: markus.jpg
+    image: markus.JPG
     deletedDate: '2017-07-01'
   -
     name: 'Pax'
     description: 'Famous in every corner of the world. Fully customizable!'
     price: 99.99
-    image: pax.jpg
+    image: pax.JPG
   -
     name: 'Skarsta'
     description: 'With this desk you can procrastinate both standing or sitting!'
     price: 149.99
-    image: Skarsta.jpg
+    image: Skarsta.JPG
   -
     name: 'Skymmingen'
     description: 'As opposed to what it looks like, this does not generate wind energy'
     price: 19.1
-    image: skymningen.jpg
+    image: skymningen.JPG
     deletedDate: '2017-09-20'
   -
     name: 'Tärnö'
     description: 'Easy to set up'
     price: 10.99
-    image: tärnö.jpg
+    image: tärnö.JPG
     reviews:
       - { text: 'Sweet and simple, I love it!', author: morty }
   -
@@ -268,19 +268,19 @@ products:
     description: 'Keeps your feet warm in the bathroom'
     price: 2.99
     quantity: 3
-    image: toftbo.jpg
+    image: toftbo.JPG
   -
     name: 'Tosterö'
     description: 'Every barbecue fits in this'
     price: 19.99
     quantity: 0
-    image: tosterö.jpg
+    image: tosterö.JPG
   -
     name: 'Tuffing'
     description: 'Very safe bunkbed'
     price: 99.99
     quantity: 8
-    image: tuffing.jpg
+    image: tuffing.JPG
     reviews:
       - { text: 'My kid fell down all the bunkbeds we had before. But not this one! Bobby is finally safe.', author: bjoernOwasp }
   -
@@ -288,7 +288,7 @@ products:
     description: 'Fits nicely in every student bed room in the city centre of Amsterdam'
     price: 999.99
     quantity: 0
-    image: vimle.jpg
+    image: vimle.JPG
     reviews:
       - { text: "I had to throw everything out, but now it easily fits in my five square metres room!", author: rapper }
   -
@@ -296,7 +296,7 @@ products:
     description: "The fully customizable kitchen closet"
     price: 99.00
     quantity: 0
-    image: metod.jpg
+    image: metod.JPG
     reviews:
       - { text: "My whole kitchen is Metod!", author: rapper }
       - { text: "I have spent six hours customizing it and it's exactly how I want it", author: jim }
